--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "2.1.0",
     "gulp-imagemin": "^2.2.1",
+    "gulp-webserver": "^0.9.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-plumber": "^0.6.6",
