--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browserify": "^9.0.3",
     "chai": "^2.1.0",
     "es6-promise": "^2.0.1",
+    "glob": "^5.0.14",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "2.1.0",
     "gulp-imagemin": "^2.2.1",
