--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.2",
     "gulp-plumber": "^0.6.6",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "2.0.3",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "handlebars": "^3.0.0",
