--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "devDependencies": {
     "browserify": "^9.0.3",
+    "babelify": "7.2.0",
+    "babel-preset-es2015": "6.3.13",
     "chai": "^2.1.0",
     "es6-promise": "^2.0.1",
     "glob": "^5.0.14",
