--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "yargs": "^3.3.1"
   },
   "dependencies": {
-    "jspot": "^0.3.7",
+    "jspot": "0.3.9",
     "gulp-po2json": "^0.4.0",
     "jed": "^1.1.0",
     "simple-ajax": "^2.1.0",
