--- a/package.json
+++ b/package.json
@@ -6,46 +6,46 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "browserify": "^9.0.3",
+    "browserify": "9.0.3",
     "babelify": "7.2.0",
     "babel-preset-es2015": "6.3.13",
-    "chai": "^2.1.0",
-    "es6-promise": "^2.0.1",
-    "glob": "^5.0.14",
-    "gulp": "^3.8.11",
+    "chai": "2.1.0",
+    "es6-promise": "2.0.1",
+    "glob": "5.0.14",
+    "gulp": "3.8.11",
     "gulp-autoprefixer": "2.1.0",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-webserver": "^0.9.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-plumber": "^0.6.6",
+    "gulp-imagemin": "2.2.1",
+    "gulp-webserver": "0.9.0",
+    "gulp-jscs": "1.4.0",
+    "gulp-jshint": "1.9.2",
+    "gulp-plumber": "0.6.6",
     "gulp-sass": "2.0.3",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-uglify": "^1.1.0",
-    "handlebars": "^3.0.0",
-    "hbsfy": "^2.2.1",
-    "jshint-stylish": "^1.0.1",
-    "karma": "^0.12.31",
-    "karma-browserify": "^3.0.3",
-    "karma-chai": "^0.1.0",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-sinon": "^1.0.4",
+    "gulp-sourcemaps": "1.5.0",
+    "gulp-uglify": "1.1.0",
+    "handlebars": "3.0.0",
+    "hbsfy": "2.2.1",
+    "jshint-stylish": "1.0.1",
+    "karma": "0.12.31",
+    "karma-browserify": "3.0.3",
+    "karma-chai": "0.1.0",
+    "karma-junit-reporter": "0.2.2",
+    "karma-mocha": "0.1.10",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-sinon": "1.0.4",
     "merge-stream": "0.1.7",
-    "mocha": "^2.1.0",
-    "sinon": "^1.12.2",
-    "underscore": "^1.8.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "yargs": "^3.3.1"
+    "mocha": "2.1.0",
+    "sinon": "1.12.2",
+    "underscore": "1.8.2",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "yargs": "3.3.1"
   },
   "dependencies": {
     "jspot": "0.3.10",
-    "gulp-po2json": "^0.4.0",
-    "jed": "^1.1.0",
-    "simple-ajax": "^2.1.0",
+    "gulp-po2json": "0.4.0",
+    "jed": "1.1.0",
+    "simple-ajax": "2.1.0",
     "express": "4.11.2",
-    "body-parser": "~1.12.0"
+    "body-parser": "1.12.0"
   }
 }
